[package]
name = "arena"
version = "0.0.0"
authors = ["Richard <Richard>"]
edition = "2018"
description = "A macro for create arenas of structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/arena"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2"
lazy_static = "1.4.0"